get.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gettask
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - gettask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask-con
        image: azureus3k/gettask3005
        ports: 
        - containerPort: 8000
