todoapp_deployment.yaml
# Deployment Manifest
# Todo FrontEnd
# Add Task
# Get Task
# Delete Task
#ToDo App- Frontend

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todoapp
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - todoapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp-con
        image: azureus3k/todoui_2306
        ports: 
        - containerPort: 80

---

# Add Task - Backend

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: addtask
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - addtask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: addtask
    spec:
      containers:
      - name: addtask-con
        image: azureus3k/addtask1708
        ports: 
        - containerPort: 8000
---

# Get Task - Backend

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gettask
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - gettask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask-con
        image: azureus3k/gettask1708
        ports: 
        - containerPort: 8000
---
# Delete Task - Backend

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deletetask
spec:
  replicas: 1
  selector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - deletetask
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask-con
        image: azureus3k/deletetask1708
        ports: 
        - containerPort: 8000
