database_deployment.yaml
# SQL Database Statefulset 
# PVC for MSSQL Database

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        securityContext:
          runAsUser: 0 
          allowPrivilegeEscalation: true
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-storage
        persistentVolumeClaim:
          claimName: mssql-pvc


---

# MSSQL Service

apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
