get-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: service-gettask
spec: 
  selector:
    app: gettask
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
